--- a/საფრანგეთის_მარშალი.mw
+++ b/საფრანგეთის_მარშალი.mw
@@ -47,6 +47,26 @@
 * [[1391]] - ჟან II ლე მენგრი (Jean II. Le Maingre) მეტსახელად „ბუსიკო“ (Boucicaut) (* [[1366]] - † [[1421]])
 * [[1397]] - ჟან II დე რიო (Jean II. de Rieux) (* [[1342]] - † [[1417]]), სენიორ დე რიო დე როშფორი
 
+==XV საუკუნე==
+
+* [[1417]] - პიერ დე რიო (Pierre de Rieux) „დე როშფორი“ ("de Rochefort") (* [[1389]] - † [[1439]])
+* [[1421]] - ჟილბერ III მოტიე, სენიორ დე ლა ფაიეტი (Gilbert III. Motier, Seigneur de La Fayette) (* [[1380]] - † [[1464]])
+* [[1424]] - ამორი დე სევერაკი (Amaury de Séverac) († [[1427]])
+* [[1427]] - ჟან I დე ბროსი (Jean I. de Brosse) (* [[1375]] - † [[1433]])
+* [[1429]] – [[დე რე, ჟილ|ჟილ დე რე]] (Gilles de Rais) (* [[1404]] - † [[1440]])
+* [[1435]] - ჟან დე ვიიერი (Jean de Villiers) (* [[1384]] - † [[1437]])
+* [[1439]] - ანდერ დე ლავალი, სირ დე ლოეაკი (André de Laval, Sire de Lohéac) (* [[1411]] - † [[1486]]), “მარშალი დე ლოეაკი” ("Maréchal de Lohéac”)
+* [[1441]] - ფილიპ დე კიულანი (Philippe de Culan) († [[1454]])
+* [[1454]] - ჟან დე სენტრეი (Jean de Xaintrailles) (* [[1400]] - † [[1461]])
+* [[1461]] - ჟან დე ლესკიუნი (Jean de Lescun) “არმანიაკის ნაბიჭვარი” ("Le Bâtard d'Armagnac") († [[1473]])
+* [[1461]] - ჟოაკიმ რუოლი, სენიორ დე გამაშე (Joachim Rouault, Seigneur de Gamaches) († [[1478]])
+* [[1464]] - ვოლფერტ VI ვან ბორსელე (Wolfert VI. van Borssele), „მარშალ დე ბორზელი“ ("Maréchal de Borzelle") († [[1487]]) შოტლანდიის მეფის [[ჯეიმს I (შოტლანდია)|ჯეიმს I]]-ის სიძე
+* [[1476]] - პიერ დე როჰანი (Pierre de Rohan), „დე გიე“ ("de Gié") (* [[1451]] - † [[1514]])
+* [[1483]] - ფილიპ დე კრევკური (Philippe de Crèvecoeur) (* [[1418]] - † [[1494]])
+* [[1486]] - ჟან დე ბოდრიკური (Jean de Baudricourt) († [[1499]])
+
+
+
 
 [[de:Marschall von Frankreich]]
 [[en:Marshal of France]]
