*Empty MediaWiki Message*

--- a/ჯან_ჯაკომო_ტრივულციო.mw
+++ b/ჯან_ჯაკომო_ტრივულციო.mw
@@ -2,7 +2,7 @@
 
 ჯან ჯაკომო ტრივულციო ცნობილი და მდიდარი მილანური ოჯახის წევრი იყო. რომლებმაც ძალაუფლების ზენიტს XVI ს-ში მიაღწიეს. [[1466]] წელს ჯან ჯაკომო საფრანგეთის წინააღმდეგ მოწყობილ ლაშქრობაში მიიღო მონაწილეობა. [[1476]] წელს მან სისხლში ჩაახშო [[გველფები და გიბელინები|გიბელინების]] აჯანყება [[გენუა|გენუაში]]. 10 წლის შემდეგ, [[1486]] წელს იგი [[ნეაპოლის სამეფო|ნეაპოლის მეფის]] სამსახურში ჩადგა, ხოლო [[1494]] წელს საფრანგეთის მეფის ქვეშევრდომობა მიიღო.
 
-[[1499]] წელს საფრანგეთის ჯარის სათავეში მდგომმა ტრივულციომ მშობლიური ქალაქი მილანი და მთელი [[მილანის ისტორია|მილანის საჰერცოგო]] დაიპყრო, რისთვისაც მას [[საფრანგეთის მარსალი|საფრანგეთის მარშლის]] წოდება მიენიჭა, ხოლო მოგვიანებით მილანის შტატჰალტერიც კი გახდა.
+[[1499]] წელს საფრანგეთის ჯარის სათავეში მდგომმა ტრივულციომ მშობლიური ქალაქი მილანი და მთელი [[მილანის ისტორია|მილანის საჰერცოგო]] დაიპყრო, რისთვისაც მას [[საფრანგეთის მარშალი|საფრანგეთის მარშლის]] წოდება მიენიჭა, ხოლო მოგვიანებით მილანის შტატჰალტერიც კი გახდა.
 
 ძალაუფლების ზენიტში მყოფ ტრივულციოს მოწინააღმდეგეებმა ბრალი დადეს [[ვენეცია|ვენეციასთან]] და [[შვეიცარია|შვეიცარიასთან]] საიდუმლო კავშირში, რის გამოც მისი ავტორიტეტი საფრანგეთის მეფის თვალში ძალიან დაეცა. [[1518]] წელს ტრივულციო თავის გასასამართლებლად სამეფო კარზე გამოცხადდა, მაგრამ უპატიოდ იქნა მიღებული. ამდენი დამცირებით გატეხილი მოხუცი მარშალი მალე გარდაიცვალა კიდეც.
 
