--- a/ედგარ_იაფე.mw
+++ b/ედგარ_იაფე.mw
@@ -5,6 +5,7 @@
 
 
 [[კატეგორია:გერმანელები]]
+[[კატეგორია:გერმანელი სახელმწიფო მოღვაწეები]]
 [[კატეგორია:დაბადებული  1866]]
 [[კატეგორია:გარდაცვლილი 1921]]
 
