--- a/ტეოდორო_ტრივულციო.mw
+++ b/ტეოდორო_ტრივულციო.mw
@@ -3,3 +3,7 @@
 ტეოდორო საფრამგეთის მარშლის [[ტრივულციო, ჯან ჯაკომო|ჯან ჯაკომო ტრივულციოს]] ძმისშვილი და ცნობილი და მდიდარი მილანური ოჯახის წარმომადგენელი იყო. ბიძის მსგავსად ისიც [[საფრანგეთი|საფრანგეთის]] მეფის სამსახურში იდგა, თუმც მოგვიანებით [[ვენეცია|ვენეციის]] ჯარების მთავარი გენერალი გახდა. 
 
 [[1524]] წელს იგი [[მილანის ისტორია|მილანის]] გუბერნატორად დაინიშნა და საფრამგეთის მარშლის ტიტული მიენიჭა. მოგვიანებით იგი [[გენუა|გენუის]] გუბერნატორი გახდა, რომელიც მან [[დორია, ანდრეა|ანდრე დორიას]] გადააბარა. თეოდორო ტრივულციო [[1531]] წელს გარდაიცვა. ამ დროს მას [[ლიონი|ლიონის]] გუბერნატორის პოსტი ეკავა.
+
+
+
+[[de:Teodoro Trivulzio]]
