*Empty MediaWiki Message*

--- a/ურანი.mw
+++ b/ურანი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Uranus.jpg|thumb|250px|ურანი]]
-'''ურანი''' სიშორით მეშვიდე პლანეტაა [[მზე|მზიდან]]. ეს გაზის გიგანტი დიამეტრით მესამე და მასით მეოთხე პლანეტაა [[მზის სისტემა|მზის სისტემაში]]. მას ბერძნული ცისა და სხვა ღმერთთა შემქმნელი ღვთაების [[ურანი (ღმერთი)|ურანის]] სახელი ჰქვია. მისი ასტონომიული და ასტროლოგიური სიმბოლოა ♅.
+'''ურანი''' (ლათ. Uranus) სიშორით მეშვიდე პლანეტაა [[მზე|მზიდან]]. ეს გაზის გიგანტი დიამეტრით მესამე და მასით მეოთხე პლანეტაა [[მზის სისტემა|მზის სისტემაში]]. მას ბერძნული ცისა და სხვა ღმერთთა შემქმნელი ღვთაების [[ურანი (ღმერთი)|ურანის]] სახელი ჰქვია. მისი ასტონომიული და ასტროლოგიური სიმბოლოა ♅.
 
 [[ნასა]]’ს ’’ვოიაჯერ 2’’ ერთადერთი კოსმოსური ხომალდი იყო, რომელმაც პლანეტამდე მიაღწია და ჯერჯერობით სხვა ექსპედიციები დაგეგმილი არ არის. ვოიაჯერი 1977 წელს გაიშვა და მან ურანუსის სიახლოვემდე 1986 წლის 24 იანვარს მიაღწია, რის შემდეგაც გზა [[ნეპტუნი (პლანეტა)|ნეპტუნისკენ]] გააგრძელა.
 
