*Empty MediaWiki Message*

--- a/ტეოდორო_ტრივულციო.mw
+++ b/ტეოდორო_ტრივულციო.mw
@@ -1,9 +1,16 @@
-'''ტეოდორო ტრივულციო''' ([[იტალიური ენა|იტალ.]]: Teodoro Trivulzio) (* [[1456]]; † [[1531]]) - იტალიელი და მოგვიანებით ფრანგი მხედართმთავარი, [[საფრანგეთის მარშალი]].
+'''ტეოდორო ტრივულციო''' ([[იტალიური ენა|იტალ.]]: Teodoro Trivulzio) (* [[1456]]; † [[1531]]) - იტალიელი და მოგვიანებით ფრანგი [[მხედართმთავარი]], [[საფრანგეთის მარშალი]].
 
-ტეოდორო საფრამგეთის მარშლის [[ტრივულციო, ჯან ჯაკომო|ჯან ჯაკომო ტრივულციოს]] ძმისშვილი და ცნობილი და მდიდარი მილანური ოჯახის წარმომადგენელი იყო. ბიძის მსგავსად ისიც [[საფრანგეთი|საფრანგეთის]] მეფის სამსახურში იდგა, თუმც მოგვიანებით [[ვენეცია|ვენეციის]] ჯარების მთავარი გენერალი გახდა. 
+ტეოდორო საფრანგეთის მარშლის [[ტრივულციო, ჯან ჯაკომო|ჯან ჯაკომო ტრივულციოს]] ძმისშვილი და ცნობილი და მდიდარი მილანური ოჯახის წარმომადგენელი იყო. ბიძის მსგავსად ისიც [[საფრანგეთი|საფრანგეთის]] მეფის სამსახურში იდგა, თუმც მოგვიანებით [[ვენეცია|ვენეციის]] ჯარების მთავარი გენერალი გახდა. 
 
-[[1524]] წელს იგი [[მილანის ისტორია|მილანის]] გუბერნატორად დაინიშნა და საფრამგეთის მარშლის ტიტული მიენიჭა. მოგვიანებით იგი [[გენუა|გენუის]] გუბერნატორი გახდა, რომელიც მან [[დორია, ანდრეა|ანდრე დორიას]] გადააბარა. თეოდორო ტრივულციო [[1531]] წელს გარდაიცვა. ამ დროს მას [[ლიონი|ლიონის]] გუბერნატორის პოსტი ეკავა.
+[[1524]] წელს იგი [[მილანი|მილანის]] გუბერნატორად დაინიშნა და საფრამგეთის მარშლის ტიტული მიენიჭა. მოგვიანებით იგი [[გენუა|გენუის]] გუბერნატორი გახდა, რომელიც მან [[დორია, ანდრეა|ანდრე დორიას]] გადააბარა. თეოდორო ტრივულციო [[1531]] წელს გარდაიცვალა. ამ დროს მას [[ლიონი|ლიონის]] [[გუბერნატორი|გუბერნატორის]] პოსტი ეკავა.
 
+
+
+[[კატეგორია:იტალიელები]]
+[[კატეგორია:იტალიელი სამხედრო მოღვაწეები]]
+[[კატეგორია:ფრანგი სამხედრო მოღვაწეები]]
+[[კატეგორია:დაბადებული  1456]]
+[[კატეგორია:გარდაცვლილი 1531]]
 
 
 [[de:Teodoro Trivulzio]]
