ბმულები და კატეგორიები

--- a/ჯან_ჯაკომო_ტრივულციო.mw
+++ b/ჯან_ჯაკომო_ტრივულციო.mw
@@ -1,9 +1,21 @@
-'''ჯან ჯაკომო ტრივულციო''', მარკიზი დი ვიგევანო ([[იატლიური ენა|იტალ.]]:Gian Giacomo Trivulzio, Marchese di Vigevano) (* [[1436]], [[მილანი]], [[იტალია]]; † [[1518]]) - წარმოშობით იტალიელი [[საფრანგეთი|საფრანგეთის]] ჯარების მთავარსარდალი და [[საფრანგეთის მარშალი]].
+'''ჯან ჯაკომო ტრივულციო''', მარკიზი დი ვიგევანო ([[იტალიური ენა|იტალ.]]:Gian Giacomo Trivulzio, Marchese di Vigevano) (* [[1436]], [[მილანი]], [[იტალია]]; † [[1518]]) - წარმოშობით იტალიელები|იტალიელი [[საფრანგეთი|საფრანგეთის]] ჯარების მთავარსარდალი და [[საფრანგეთის მარშალი]].
 
-ჯან ჯაკომო ტრივულციო ცნობილი და მდიდარი მილანური ოჯახის წევრი იყო. რომლებმაც ძალაუფლების ზენიტს XVI ს-ში მიაღწიეს. [[1466]] წელს ჯან ჯაკომო საფრანგეთის წინააღმდეგ მოწყობილ ლაშქრობაში მიიღო მონაწილეობა. [[1476]] წელს მან სისხლში ჩაახშო [[გველფები და გიბელინები|გიბელინების]] აჯანყება [[გენუა|გენუაში]]. 10 წლის შემდეგ, [[1486]] წელს იგი [[ნეაპოლის სამეფო|ნეაპოლის მეფის]] სამსახურში ჩადგა, ხოლო [[1494]] წელს საფრანგეთის მეფის ქვეშევრდომობა მიიღო.
+ჯან ჯაკომო ტრივულციო ცნობილი და მდიდარი მილანური ოჯახის წევრი იყო, რომლებმაც ძალაუფლების ზენიტს XVI საუკუნეში მიაღწიეს. [[1466]] წელს ჯან ჯაკომო საფრანგეთის წინააღმდეგ მოწყობილ ლაშქრობაში მიიღო მონაწილეობა. [[1476]] წელს მან სისხლში ჩაახშო [[გველფები და გიბელინები|გიბელინების]] აჯანყება [[გენუა|გენუაში]]. 10 წლის შემდეგ, [[1486]] წელს იგი [[ნეაპოლის სამეფო|ნეაპოლის]] მეფის სამსახურში ჩადგა, ხოლო [[1494]] წელს საფრანგეთის მეფის ქვეშევრდომობა მიიღო.
 
 [[1499]] წელს საფრანგეთის ჯარის სათავეში მდგომმა ტრივულციომ მშობლიური ქალაქი მილანი და მთელი [[მილანის ისტორია|მილანის საჰერცოგო]] დაიპყრო, რისთვისაც მას [[საფრანგეთის მარშალი|საფრანგეთის მარშლის]] წოდება მიენიჭა, ხოლო მოგვიანებით მილანის შტატჰალტერიც კი გახდა.
 
 ძალაუფლების ზენიტში მყოფ ტრივულციოს მოწინააღმდეგეებმა ბრალი დადეს [[ვენეცია|ვენეციასთან]] და [[შვეიცარია|შვეიცარიასთან]] საიდუმლო კავშირში, რის გამოც მისი ავტორიტეტი საფრანგეთის მეფის თვალში ძალიან დაეცა. [[1518]] წელს ტრივულციო თავის გასასამართლებლად სამეფო კარზე გამოცხადდა, მაგრამ უპატიოდ იქნა მიღებული. ამდენი დამცირებით გატეხილი მოხუცი მარშალი მალე გარდაიცვალა კიდეც.
 
 ჯან ჯაკომო ტრივულციოს ძმა რენე გიბელინების მხარეზე იბრძოდა და ვენეციის სამსახურში გარდაიცვალა, ხოლო ძმისშვილი [[ტრივულციო, ტეოდორო|ტეოდორო ტრივულციო]] მოგვიანებით აგრეთვე საფრანგეთის მარშალი გახდა.
+
+
+[[კატეგორია:იტალიელები]]
+[[კატეგორია:იტალიელი სამხედრო მოღვაწეები]]
+[[კატეგორია:ფრანგი სამხედრო მოღვაწეები]]
+[[კატეგორია:დაბადებული  1436]]
+[[კატეგორია:გარდაცვლილი 1518]]
+
+[[de:Gian Giacomo Trivulzio]]
+[[en:Gian Giacomo Trivulzio]]
+[[fr:Jacques de Trivulce]]
+[[it:Gian Giacomo Trivulzio]]
