*Empty MediaWiki Message*

--- a/ჯან_ჯაკომო_ტრივულციო.mw
+++ b/ჯან_ჯაკომო_ტრივულციო.mw
@@ -1,4 +1,4 @@
-'''ჯან ჯაკომო ტრივულციო''', მარკიზი დი ვიგევანო ([[იტალიური ენა|იტალ.]]:Gian Giacomo Trivulzio, Marchese di Vigevano) (* [[1436]], [[მილანი]], [[იტალია]]; † [[1518]]) - წარმოშობით იტალიელები|იტალიელი [[საფრანგეთი|საფრანგეთის]] ჯარების მთავარსარდალი და [[საფრანგეთის მარშალი]].
+'''ჯან ჯაკომო ტრივულციო''', მარკიზი დი ვიგევანო ([[იტალიური ენა|იტალ.]]:Gian Giacomo Trivulzio, Marchese di Vigevano) (* [[1436]], [[მილანი]], [[იტალია]]; † [[1518]]) - წარმოშობით [[იტალიელები|იტალიელი]] [[საფრანგეთი|საფრანგეთის]] ჯარების მთავარსარდალი და [[საფრანგეთის მარშალი]].
 
 ჯან ჯაკომო ტრივულციო ცნობილი და მდიდარი მილანური ოჯახის წევრი იყო, რომლებმაც ძალაუფლების ზენიტს XVI საუკუნეში მიაღწიეს. [[1466]] წელს ჯან ჯაკომო საფრანგეთის წინააღმდეგ მოწყობილ ლაშქრობაში მიიღო მონაწილეობა. [[1476]] წელს მან სისხლში ჩაახშო [[გველფები და გიბელინები|გიბელინების]] აჯანყება [[გენუა|გენუაში]]. 10 წლის შემდეგ, [[1486]] წელს იგი [[ნეაპოლის სამეფო|ნეაპოლის]] მეფის სამსახურში ჩადგა, ხოლო [[1494]] წელს საფრანგეთის მეფის ქვეშევრდომობა მიიღო.
 
