*Empty MediaWiki Message*

--- a/რიხტჰოფენი.mw
+++ b/რიხტჰოფენი.mw
@@ -14,3 +14,11 @@
 * [[რიხტჰოფენი, კარლ-ბოლკო ფონ|კარლ-ბოლკო ფონ რიხტჰოფენი]] (1903-1971), „წინთელი ბარონის“ ძმა.
 * [[რიხტჰოფენი, ჰერმან ფონ|ჰერმან ფონ რიხტჰოფენი]] (* 1933), დიპლომატი.
 * [[რიხტჰოფენი, მანფრედ ფონ (სპორტი)|მანფრედ ფონ რიხტჰოფენი]] (* 1934), გერმანელი მეწარმე და [[1994]] წლიდან [[გერმანიის სპორტის კავშირი|გერმანიის სპორტის კავშირის]] პრეზიდენტი.
+
+
+[[კატეგორია:გერმანული არისტოკრატთა საგვარეულოები]]
+[[de:Richthofen]]
+[[en:Richthofen]]
+[[ja:リヒトホーフェン]]
+[[ru:Фон Рихтгофен]]
+[[sl:Richthofen]]
