ბმულები და კატეგორიები

--- a/ჰერმან_ფონ_რიხტჰოფენი.mw
+++ b/ჰერმან_ფონ_რიხტჰოფენი.mw
@@ -1,4 +1,4 @@
-[[ბარონი]] '''ჰერმან ფონ რიხტჰოფენი''' ([[გერმ.]]: Hermann Freiherr von Richthofen) (* [[20 ნოემბერი]] [[1933]], [[ბრესლაუ]], დღ. [[პოლონეთი]]) – [[გერმანელები|გერმანელი]] დიპლომატი და სახელმწიფო მოღვაწე.
+[[ბარონი]] '''ჰერმან ფონ რიხტჰოფენი''' ([[გერმ.]]: Hermann Freiherr von Richthofen) (* [[20 ნოემბერი]], [[1933]], [[ბრესლაუ]], დღ. [[პოლონეთი]]) – [[გერმანელები|გერმანელი]] დიპლომატი და სახელმწიფო მოღვაწე.
 
 * [[1955]]-[[1958]]
 :ფონ რიხტჰოფენი სამართალმცოდნეობას სწავლობდა [[მიუნხენი|მიუნხენში]], [[ჰაიდელბერგი|ჰაიდელბერგში]] და [[ბონი|ბონში]].
@@ -16,3 +16,14 @@
 : ფონ რიხტჰოფენი ელჩად მუშაობდა [[ნატო]]-ში.
 
 იგი არის [[რიხტჰოფენი, მანფრედ ფონ (წითელი ბარონი)|მანფრედ ფონ რიხტჰოფენის]] ძმის შვილიშვილი, ჰყავს მეუღლე და 3 შვილი.
+
+
+[[კატეგორია:გერმანელები]]
+[[კატეგორია:გერმანელი დიპლომატები]]
+[[კატეგორია:დაბადებული  1933]]
+
+
+
+[[de:Hermann Freiherr von Richthofen]]
+[[en:Hermann von Richthofen]]
+[[no:Hermann von Richthofen]]
