--- a/რიხტჰოფენი.mw
+++ b/რიხტჰოფენი.mw
@@ -1,3 +1,4 @@
+[[სურათი:553px-Wappen-Richthofen.jpg|thumb|რიხტჰოფენთა საგვარეულო გერბი]]
 სახელს '''რიხტჰოფენი''' ([[გერმ.]]: Richthofen) (თავდაპირველი ვერსია: პრეტორიუს ფონ რიხტჰოფენი; [[გერმ.]]: Prätorius von Richthofen) ატარებდნენ:
 
 
