--- a/23_სექტემბერი.mw
+++ b/23_სექტემბერი.mw
@@ -2,7 +2,7 @@
 
 
 ==დღის მოვლენები==
-
+*[[1846]] : აღმოჩენილ იქნა პლანეტა [[ნეპტუნი (პლანეტა)|ნეპტუნი]].
 
 ==ამ დღეს დაბადებულნი==
 *[[1871]] : [[კოტოკუ დენძირო]] - იაპონიის სოციალისტური მოძრაობის მოღვაწე, პუბლიცისტი.
