*Empty MediaWiki Message*

--- a/ურანი.mw
+++ b/ურანი.mw
@@ -1,5 +1,7 @@
 [[სურათი:Uranus.jpg|thumb|250px|ურანი]]
-'''ურანი''' (ლათ. Uranus) სიშორით მეშვიდე პლანეტაა [[მზე|მზიდან]]. ეს გაზის გიგანტი დიამეტრით მესამე და მასით მეოთხე პლანეტაა [[მზის სისტემა|მზის სისტემაში]]. მას ბერძნული ცისა და სხვა ღმერთთა შემქმნელი ღვთაების [[ურანი (ღმერთი)|ურანის]] სახელი ჰქვია. მისი ასტონომიული და ასტროლოგიური სიმბოლოა ♅.
+'''ურანი''' (''[[ლათინური ენა|ლათ.]]'' Uranus) მზის სისტემის მეშვიდე პლანეტა [[მზე|მზიდან]] დაშორების მიხედვით. ეს გაზის გიგანტი დიამეტრით მესამე და მასით მეოთხე პლანეტაა [[მზის სისტემა|მზის სისტემაში]]. მას ბერძნული ცისა და სხვა ღმერთთა შემქმნელი ღვთაების [[ურანი (ღმერთი)|ურანის]] სახელი ჰქვია. მისი ასტონომიული და ასტროლოგიური სიმბოლოა ♅.
+
+ეკუთვნის გიგანტი პლანეტების ჯგუფს. აღმოაჩინა [[ჰერშელი, უილიამ |უ. ჰერშელმა]] 1781 წელს. ურანის საშუალო მანძილი მზიდან არის 2869,6 მლ. კმ. ორბიტის ექსცენტისიტეტი - 0,046, დახრა ეკლიპტიკის სიბრტყისადმი - 0°46´23", გარემოქცევის სიდერული პერიოდი - 84,02 წ, სინოდური პერიოდი - 369,66 დღე-ღამე.
 
 [[ნასა]]’ს ’’ვოიაჯერ 2’’ ერთადერთი კოსმოსური ხომალდი იყო, რომელმაც პლანეტამდე მიაღწია და ჯერჯერობით სხვა ექსპედიციები დაგეგმილი არ არის. ვოიაჯერი 1977 წელს გაიშვა და მან ურანუსის სიახლოვემდე 1986 წლის 24 იანვარს მიაღწია, რის შემდეგაც გზა [[ნეპტუნი (პლანეტა)|ნეპტუნისკენ]] გააგრძელა.
 
