*Empty MediaWiki Message*

--- a/პლუტონი.mw
+++ b/პლუტონი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Pluto.jpg|thumb|250px|პლუტონის ფერი]]
-'''პლუტონი''' ტრადიციულად მეცხრე პლანეტაა მზის სისტემაში, თუმცა ეს სტატუის ბოლო წლებში მწვავე დისკუსიის საგანია. პლანეტას ექსცენტრიული ორბიტა აქვს, რომელიც სხვა პლანეტათა გავლენის ქვეშ ექცევა და ამგვარად ის პერიოდულად ნეპტუნის ორბიტის შიგნით ხვდება. ის ასევე უმცირესი პლანეტა და ზოგიერთ თანამგზავრზე მცირეცაა. პლუტონს თავად ერთი დიდი ზომის თანამგზავრი ქარონი ჰყავს; ორი მცირე მთვარე აღმოჩენილ იქნა 2005 წელს. მიხი ასტრონომიული სიმბოლოა ლათ. P-L მონოგრამა, ♇. ეს წარმოადგენს თავად პლუტონის სახელის პირველ ორ ასოსა და პერსივალ ლოუელის ინიციალებს. ლოუელი ინტენსიურად ეძებდა მეცხრე პლანეტას და შედეგად თავად ობსერვატორიასაც საიდანაც პლუტონი აღმოაჩინეს მისი სახელი დაერქვა. კოსმოსური ხომალდი ’’ნიუ-ჰორაიზონს’’, რომელიც ფლორიდის კეიპ-კანავერალის კოსმოდრომიდან გაიშვა 2006 წლის 19 იანვარს გახდება პირველი უმართავი ხომალდი, რომელიც პლუტონს ჩაუფრენს 2015 წლის 14 ივლისს. 
+'''პლუტონი''' (Pluto) ტრადიციულად მეცხრე პლანეტაა [[მზის სისტემა|მზის სისტემაში, თუმცა ეს სტატუსი ბოლო წლებში მწვავე დისკუსიის საგანია. პლანეტას ექსცენტრიული ორბიტა აქვს, რომელიც სხვა პლანეტათა გავლენის ქვეშ ექცევა და ამგვარად ის პერიოდულად [[ნეპტუნი (პლანეტა)|ნეპტუნის]] ორბიტის შიგნით ხვდება. ის პლანეტათაგან უმცირესი და ზოგიერთ თანამგზავრზე მცირეცაა. პლუტონს თავად ერთი დიდი ზომის თანამგზავრი ქარონი ჰყავს; ორი მცირე მთვარე აღმოჩენილ იქნა 2005 წელს. მისი ასტრონომიული სიმბოლოა ლათ. P-L მონოგრამა, ♇. ეს წარმოადგენს თავად პლუტონის სახელის პირველ ორ ასოსა და ’’პერსივალ ლოუელის’’ ინიციალებს. ლოუელი ინტენსიურად ეძებდა მეცხრე პლანეტას და შედეგად თავად ობსერვატორიასაც, საიდანაც პლუტონი აღმოაჩინეს, მისი სახელი დაერქვა. კოსმოსური ხომალდი ’’ნიუ-ჰორაიზონს’’, რომელიც ფლორიდის კეიპ-კანავერალის კოსმოდრომიდან გაიშვა 2006 წლის 19 იანვარს გახდება პირველი უმართავი ხომალდი, რომელიც პლუტონს ჩაუფრენს 2015 წლის 14 ივლისს. 
 
 
 {{ესკიზი}}
@@ -8,3 +8,60 @@
 {{მზის სისტემა}}
 
 [[კატეგორია:მზის სისტემა]]
+
+[[ang:Pluto]]
+[[ar:بلوتو]]
+[[bg:Плутон (планета)]]
+[[bs:Pluton]]
+[[br:Ploudon]]
+[[ca:Plutó (planeta)]]
+[[cs:Pluto (planeta)]]
+[[cy:Plwto]]
+[[da:Pluto (planet)]]
+[[de:Pluto (Planet)]]
+[[et:Pluuto]]
+[[el:Πλούτωνας (πλανήτης)]]
+[[es:Plutón (planeta)]]
+[[eo:Plutono]]
+[[eu:Plutoi]]
+[[fa:پلوتون]]
+[[fr:Pluton (planète)]]
+[[ga:Plútón (pláinéad)]]
+[[gl:Plutón (planeta)]]
+[[gu:પ્લૂટો (ગ્રહ)]]
+[[ko:명왕성]]
+[[hr:Pluton (planet)]]
+[[io:Plutono]]
+[[id:Pluto]]
+[[it:Plutone (astronomia)]]
+[[he:פלוטו (כוכב לכת)]]
+[[kn:ಪ್ಲುಟೊ]]
+[[kw:Plouton (planet)]]
+[[la:Pluto (planeta)]]
+[[lv:Plutons]]
+[[lt:Plutonas]]
+[[hu:Plútó (bolygó)]]
+[[ms:Pluto]]
+[[nl:Pluto (planeet)]]
+[[ja:冥王星]]
+[[no:Pluto (planet)]]
+[[nn:Planeten Pluto]]
+[[pam:Pluto]]
+[[pl:Pluton (planeta)]]
+[[pt:Plutão]]
+[[ro:Pluto (planetă)]]
+[[ru:Плутон (планета)]]
+[[scn:Plutoni]]
+[[simple:Pluto (planet)]]
+[[sk:Pluto (planéta)]]
+[[sl:Pluton (planet)]]
+[[sr:Плутон (планета)]]
+[[fi:Pluto (planeetta)]]
+[[sv:Pluto (planet)]]
+[[tl:Pluto]]
+[[th:ดาวพลูโต]]
+[[vi:Diêm Vương Tinh]]
+[[tr:Plüton (gezegen)]]
+[[uk:Плутон (планета)]]
+[[zh:冥王星]]
+[[zh-min-nan:Mê-ông-chheⁿ]]
