--- a/ფრენკ_გერი.mw
+++ b/ფრენკ_გერი.mw
@@ -4,6 +4,21 @@
 ==ნამუშევრები==
 ==ჯილდოები==
 ==გალერეა==
+გერის ნამუშევართა დამატებითი ფოტოგალერეა:
+
+<gallery>
+Image:Weisman Art Museum.jpg|[[ვაისმანის ხელოვნების მუზეუმი]]
+Image:Prague - Dancing House.jpg|[[ფრედი და ჯინჯერი]]
+Image:Guggenheim-bilbao-jan05.jpg|[[გუგენჰაიმის მუზეუმი (ბილბაო)]]
+Image:DG Bank Interior, Berlin.jpg|[[დოიჩე გენოსენშაფტსბანკის შენობა]], ატრიუმი
+Image:Emp.jpg|[[ექსპერიენს-მიუზიკ პროექტი]] სამხრეთ-აღმ. კუთხე
+Image:Fisher at Bard College.jpg|[[რიჩარდ ფიშერის საშემსრულებლო ხელოვნების ცენტრი]]
+Image:Lightmatter disneyhall5.jpg|[[უოლტ დისნეის საკონცერტო ჰოლი]]
+Image:Wfm stata center.jpg|[[სტატას ცენტრი]]
+Image:PBLewis1.JPG|პიტერ ლიუისის შენობა, [[უიზერჰედის მენეჯმენტის სკოლა]]
+Image:PBLlobby.JPG|პიტერ ლიუისისი შენობის ინტერიერი
+</gallery>
+
 ==რესურსები ინტერნეტში==
 
 [[კატეგორია:არქიტექტორები]]
