*Empty MediaWiki Message*

--- a/ორბელი.mw
+++ b/ორბელი.mw
@@ -1,5 +1,3 @@
-{{მრავალმნიშვნელოვანი}}
-
 საკუთარი სახელი '''ორბელი''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 
@@ -10,7 +8,10 @@
 * [[ორბელი, იოსებ]] - აღმოსავლეთმცოდნე და საზოგადო მოღვაწე
 * [[ორბელი, ლეონ]] - ფიზიოლოგი
 * [[ორბელი, ლიპარიტ]] - სახელმწიფო მოღვაწე
-* [[ორბელი, ლიპარიტ სუმბათის ძე]] - პოლიტიკური მოღვაწე
+* [[ორბელი, ლიპარიტ სუმბატის ძე]] - პოლიტიკური მოღვაწე
 * [[ორბელი, სუმბატ]] - სახელმწიფო მოღვაწე
 * [[ორბელი, სუმბატ ლიპარიტის ძე]] - პოლიტიკურო მოღვაწე
 * [[ორბელი, ტარსაიჭ]] - სახელმწიფო მოღვაწე
+
+
+{{მრავალმნიშვნელოვანი}}
