*Empty MediaWiki Message*

--- a/რატი_I_სურამელი.mw
+++ b/რატი_I_სურამელი.mw
@@ -1,4 +1,4 @@
-'''რატი I სურამელი''', XII საუკუნის II ნახევრისა და XIII საუკუნის დასაწყისის [[ქართველები|ქართველი]] დიდგვარიანი ფეოდალი, შვილი [[სურამელი, ბეგა I|ბეგა I სურამელისა]] და ხუაშაქ ცოქალისა. [[დემნა (დემეტრე) უფლისწული|დემნა უფლისწულის]] აჯანყების  შემდეგ  [[გიორგი III, საქართველოს მეფე|გიორგი III-მ]] ქართლის ერისთავობა ჩამოართვა ამ აჯანყების  მონაწილე [[ორბელი, ლიპარიტ სუმბატის ძე|ლიპარიტ სუმბატის ძე ორბელს]] და გადასცა რატი I სურამელს. ამის შემდეგ [[სურამელები]] გახდნენ ერისთავთერისთავები, ქართლის ერისთავები. გიორგი III-ის [[1170]] სიგელის ცნობით, სურამელის მღვიმის მონასტრისათვის შეუწირავს სოფ. კობალი. მისი ვაჟი ქართლის ერისთავი [[სურამელი, სულა|სულა]].
+'''რატი I სურამელი''', XII საუკუნის II ნახევრისა და XIII საუკუნის დასაწყისის [[ქართველები|ქართველი]] დიდგვარიანი ფეოდალი, შვილი [[სურამელი, ბეგა I|ბეგა I სურამელისა]] და [[ხუაშაქ ცოქალი|ხუაშაქ ცოქალისა]]. [[დემნა (დემეტრე) უფლისწული|დემნა უფლისწულის]] აჯანყების  შემდეგ  [[გიორგი III, საქართველოს მეფე|გიორგი III-მ]] ქართლის ერისთავობა ჩამოართვა ამ აჯანყების  მონაწილე [[ორბელი, ლიპარიტ სუმბატის ძე|ლიპარიტ სუმბატის ძე ორბელს]] და გადასცა რატი I სურამელს. ამის შემდეგ [[სურამელები]] გახდნენ ერისთავთერისთავები, ქართლის ერისთავები. გიორგი III-ის [[1170]] სიგელის ცნობით, სურამელის მღვიმის მონასტრისათვის შეუწირავს სოფ. კობალი. მისი ვაჟი ქართლის ერისთავი [[სურამელი, სულა|სულა]].
 
 
 [[კატეგორია:ქართველები]]
