--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -5,7 +5,7 @@
 {{რომის მთავრობა}}
 ===მეფობის პერიოდი===
 
-{{ესკიზი}}
+თქმულების თანახმად, სენატი შეიქმნა [[რომის სამეფო|რომის]] დაარსების თანავე. [[რომულუსი|რომულუსმა]], რომის ლეგენდარულმა დამაარსებელმა, შექმნა საბჭო 100 უხუცესი მოქალაქისგან, რომლებსაც მამები - პატრიციუსები ეწოდათ.
 
 ===რესპუბლიკა===
 
