--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -5,7 +5,9 @@
 {{რომის მთავრობა}}
 ===მეფობის პერიოდი===
 
-თქმულების თანახმად, სენატი შეიქმნა [[რომის სამეფო|რომის]] დაარსების თანავე. [[რომულუსი|რომულუსმა]], რომის ლეგენდარულმა დამაარსებელმა, შექმნა საბჭო 100 უხუცესი მოქალაქისგან, რომლებსაც მამები - პატრიციუსები ეწოდათ.
+თქმულების თანახმად, სენატი შეიქმნა [[რომის სამეფო|რომის]] დაარსების თანავე. [[რომულუსი|რომულუსმა]], რომის ლეგენდარულმა დამაარსებელმა, შექმნა საბჭო 100 უხუცესი მოქალაქისგან, რომლებსაც მამები - პატრიციუსები ეწოდათ. სენატორები ასრულებდნენ მეფოს მრჩევლების რომლს, ხოლო მეფის გარდაცვალების შემდეგ, ახალი მეფის არჩევა მათ კომპეტენციაში შედიოდა.
+
+რომულუსის მიერ საბინელთა შემოერთების შემდეგ, სენატი შეივსო საბინელი უხუცესებით და სენატორთა რაოდენობა 200 გახდა. თქმულების თანახმად
 
 ===რესპუბლიკა===
 
