--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -7,7 +7,7 @@
 
 თქმულების თანახმად, სენატი შეიქმნა [[რომის სამეფო|რომის]] დაარსების თანავე. [[რომულუსი|რომულუსმა]], რომის ლეგენდარულმა დამაარსებელმა, შექმნა საბჭო 100 უხუცესი მოქალაქისგან, რომლებსაც მამები - პატრიციუსები ეწოდათ. სენატორები ასრულებდნენ მეფოს მრჩევლების რომლს, ხოლო მეფის გარდაცვალების შემდეგ, ახალი მეფის არჩევა მათ კომპეტენციაში შედიოდა.
 
-რომულუსის მიერ საბინელთა შემოერთების შემდეგ, სენატი შეივსო საბინელი უხუცესებით და სენატორთა რაოდენობა 200 გახდა. თქმულების თანახმად
+რომულუსის მიერ საბინელთა შემოერთების შემდეგ, სენატი შეივსო საბინელი უხუცესებით და სენატორთა რაოდენობა 200 გახდა. თქმულების თანახმად სენატორებმა პირველი რეპრესიები [[ლუციუს ტარკვინიუს სუპერბუსი|ლუციუს ტარკვინიუს სუპერბუსის]] მეფობის პერიოდში განიცადეს. ტარკვინიუსმა თავისი წინამორბედის, [[სერვიუს ტულიუსი|სერვიუს ტულიუსის]] მომხრე სენატორები გაწყვიტა.
 
 ===რესპუბლიკა===
 
