*Empty MediaWiki Message*

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -1,11 +1,8 @@
 ეს არის [[რომის_რესპუბლიკა|რომაელ]] კონსულთა სია [[მარკუს ტერენციუს ვარონი|ვარონის]] ქრონიკებზე დაყრდნობით.
 
-მუქად აღნიშნულია წელთაღრიცხვა რომის დაარსებიდან (იხ. [[რომაული კალენდარი]])
-
-
 ==ძვ. წ. VI საუკუნე==
 
-* [[ძვ. წ. 509|509]] ('''245''' [[რომაული კალენდარი|A.V.C.]]) - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
+* [[ძვ. წ. 509|509]] ('''245''' A.V.C.{{სქოლიო|1|avc}}) - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
 
 * [[ძვ. წ. 509|509]] ('''245''' A.V.C.) - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა, სპ. ლუკრეციუს ტრიციპიტინუს, მარკუს ჰორაციუს პულნუსი.
 
