--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -273,7 +273,7 @@
 
 ----
 
-* {{სქოლიო2|avc}}
+* {{სქოლიო2|avc}} - "A.V.C." (= "AB VRBE CONDITA") რომაული წელთაღრიცხვა, ქალაქის დაარსებიდან.
 
 [[კატეგორია:ძველი რომი]]
 
