--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -13,6 +13,8 @@
 
 მონარქიის დამხობის შემდეგ სენატის მნიშვნელობა უფრო გაიზარდა. [[ლუციუს იუნიუს ბრუტუსი|ლუციუს იუნიუს ბრუტუსმა]] სენატის შემადგენლობა 300 კაცამდე გაზარდა. რესპუბლიკის ეპოქაში სენატი უმაღლეს მმართველ ორგანოს წარმოადგენდა. იგი აკონტროლებდა სახალხო კრებების მუშაობას, ოღებდა მათ მიერ შემოთავაზებულ კანონებს ან უარყოფთა. სენატორთა წრიდან ხდებოდა [[მაგისტრატუსები|მაგისტრატუსების]] არჩევა.
 
+საშინაო პოლიტიკის საკითხების გარდა სენატი საგარეო პოლიტიკასაც მართავდა.
+
 ===იმპერია===
 
 {{ესკიზი}}
