--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -3,6 +3,9 @@
 [[სურათი:Senat_rom.jpg|thumb|250px|ციცერონის გამოსვლა სენატის წინაშე]]
 ==ისტორია==
 {{რომის მთავრობა}}
+
+ცივილიზაციის დასაბამიდან დღემდე არსებულ მმართველ ორგანოებს შორის რომის სენატმა ყველაზე დიდხანს იარსება, მისი შექმნის შესახებ ზუსტი ისტორიული წყაროები არ მოგვეპოვება, მაგრამ თქმულებების თანახმად იგი რომის დასაბამიდან არსებობდა. სენატმა თავისი ფუნქციები დაკარგა მხოლოდ III-IV საუკუნეების მიჯნაზე, [[პრინციპატი|პრინციპატის]] [[დომინანტი|დომინანტით]] შეცვლის შემდეგ. ამრიგად საერთო ჯამში სენატმა იარსება დაახლოვებით 1000 წელიწადი. ამ დროის განმავლობაში სენატის სახე და ფუნქციები არაერთხელ შეიცვალა.
+
 ===მეფობის პერიოდი===
 
 თქმულების თანახმად, სენატი შეიქმნა [[რომის სამეფო|რომის]] დაარსების თანავე. [[რომულუსი|რომულუსმა]], რომის ლეგენდარულმა დამაარსებელმა, შექმნა საბჭო 100 უხუცესი მოქალაქისგან, რომლებსაც მამები - პატრიციუსები ეწოდათ. სენატორები ასრულებდნენ მეფოს მრჩევლების რომლს, ხოლო მეფის გარდაცვალების შემდეგ, ახალი მეფის არჩევა მათ კომპეტენციაში შედიოდა.
