--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -16,6 +16,7 @@
 
 მონარქიის დამხობის შემდეგ სენატის მნიშვნელობა უფრო გაიზარდა. [[ლუციუს იუნიუს ბრუტუსი|ლუციუს იუნიუს ბრუტუსმა]] სენატის შემადგენლობა 300 კაცამდე გაზარდა. რესპუბლიკის ეპოქაში სენატი უმაღლეს მმართველ ორგანოს წარმოადგენდა. იგი აკონტროლებდა სახალხო კრებების მუშაობას, ოღებდა მათ მიერ შემოთავაზებულ კანონებს ან უარყოფთა. სენატორთა წრიდან ხდებოდა [[მაგისტრატუსები|მაგისტრატუსების]] არჩევა.
 
+[[სურათი:SPQR.jpg|thumb|left|რომის სენატი და ხალხი]]
 საშინაო პოლიტიკის საკითხების გარდა სენატი საგარეო პოლიტიკასაც მართავდა. სენატის ფუნქციებში ფინანსებზე მეთვალყურეობაც შედიოდა. მიუხედავად ამხელა ძალაუფლებისა, სენატი ვალდებული იყო გაეთვალისწინებინა სახალხო კრების აზრი. ეს აისახა იმდროინდელ სნობილ აბრივიატურაში SPQR, senatus populusque romanus (რომის სენატი და ხალხი).
 
 ===იმპერია===
