--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -14,10 +14,10 @@
 
 ===რესპუბლიკა===
 
-მონარქიის დამხობის შემდეგ სენატის მნიშვნელობა უფრო გაიზარდა. [[ლუციუს იუნიუს ბრუტუსი|ლუციუს იუნიუს ბრუტუსმა]] სენატის შემადგენლობა 300 კაცამდე გაზარდა. რესპუბლიკის ეპოქაში სენატი უმაღლეს მმართველ ორგანოს წარმოადგენდა. იგი აკონტროლებდა სახალხო კრებების მუშაობას, ოღებდა მათ მიერ შემოთავაზებულ კანონებს ან უარყოფთა. სენატორთა წრიდან ხდებოდა [[მაგისტრატუსები|მაგისტრატუსების]] არჩევა.
+მონარქიის დამხობის შემდეგ სენატის მნიშვნელობა უფრო გაიზარდა, იგი ჯერ კიდევ მცირე რომის სახელმწიფოში ასრულებდა საკანონმდებლო ხელისუფლების როლს. [[ლუციუს იუნიუს ბრუტუსი|ლუციუს იუნიუს ბრუტუსმა]] სენატის შემადგენლობა 300 კაცამდე გაზარდა. იგი აკონტროლებდა სახალხო კრებების მუშაობას, ოღებდა მათ მიერ შემოთავაზებულ კანონებს ან უარყოფთა. სენატორთა წრიდან ხდებოდა [[მაგისტრატუსები|მაგისტრატუსების]] არჩევა.
 
 [[სურათი:SPQR.jpg|thumb|left|რომის სენატი და ხალხი]]
-საშინაო პოლიტიკის საკითხების გარდა სენატი საგარეო პოლიტიკასაც მართავდა. სენატის ფუნქციებში ფინანსებზე მეთვალყურეობაც შედიოდა. მიუხედავად ამხელა ძალაუფლებისა, სენატი ვალდებული იყო გაეთვალისწინებინა სახალხო კრების აზრი. ეს აისახა იმდროინდელ სნობილ აბრივიატურაში SPQR, senatus populusque romanus (რომის სენატი და ხალხი).
+საშინაო პოლიტიკის საკითხების გარდა სენატი საგარეო პოლიტიკასაც მართავდა. სენატის ფუნქციებში ფინანსებზე მეთვალყურეობაც შედიოდა. ამის გარდა სენატი იღებდა და აუქმებდა კანონებს. ყველა ამ მნიშვნელოვანი ფუნქციის შესრულებამ სენატი სახელმწიფოს გულად აქცია. რიგითი რომაელისთვის სენტის უპატივცემლობა სახელმწიფოს უპატივცემლობას უტოლდებოდა. ეს კარგად აისახა ცნობილ ფორმულაშიც SPQR, senatus populus que romanus (რომის სენატი და ხალხი).
 
 ===იმპერია===
 
