*Empty MediaWiki Message*

--- a/მარიის_სასახლე_(სანქტ-პეტერბურგი).mw
+++ b/მარიის_სასახლე_(სანქტ-პეტერბურგი).mw
@@ -1,9 +1,9 @@
 [[სურათი:Marie palace.jpg|thumb|250px|ადგილობრივი ქვიშის მოწითალო-მოყავისფრო აგურით ნაგები მარიის სასახლის ფასადი]]
-'''მარიის სასახლე''', ასევე ცნობილი როგორც '''მარიინსკის სასახლე''' იყო ბოლო [[ნეოკლასიციზმი|ნეოკლასიკურ]] სტილში ნაგები იმპერიული სასახლე [[სანკტ-პეტერბურგი|სანკტ-პეტერბურგში]], [[რუსეთი]]. სასახლე აშენდა 1839-1844 წლებში სამეფო კარის არქიტექტორი ანდრეი სტაკენშნეიდერის პროექტით.
+'''მარიის სასახლე''', ასევე ცნობილი როგორც '''მარიინსკის სასახლე''' იყო ბოლო [[ნეოკლასიციზმი|ნეოკლასიკურ]] სტილში ნაგები იმპერიული სასახლე [[სანქტ-პეტერბურგი|სანქტ-პეტერბურგში]], [[რუსეთი]]. სასახლე აშენდა 1839-1844 წლებში სამეფო კარის არქიტექტორი ანდრეი სტაკენშნეიდერის პროექტით.
 
-სასახლე დგას [[წმინდა ისაკის საკათედრო ტაძარი|წმინდა ისაკის საკათედრო ტაძრის]] პირდაპირ 99 მეტრი სიგანის ლურჯი ხიდის გადაღმა. მე-18 საუკუნეში ეს ადგილი ეკუთვნოდა ზახარ ჩერნიაშოვს, სადაც მისი სახლი იდგა (1762-68), რომელსაც დროდადრო უთმობდნენ კონდეს პრინცსა და სხვა უცხოელ ძვირფას სტუმრებს რუსეთის დედაქალაქში ვიზიტისას. 1825-39 წლებში ჩერნიაშოვის სახლში სამხედრო სკოლა იმყოფებოდა, სადაც [[ლერმონტობი, მიხაილ|მიხაილ ლერმონტოვი]] სწავლობდა ორი წელი.
+სასახლე დგას [[წმინდა ისაკის საკათედრო ტაძარი|წმინდა ისაკის საკათედრო ტაძრის]] პირდაპირ 99 მეტრი სიგანის ლურჯი ხიდის გადაღმა. მე-18 საუკუნეში ეს ადგილი ეკუთვნოდა ზახარ ჩერნიაშოვს, სადაც მისი სახლი იდგა (1762-68), რომელსაც დროდადრო უთმობდნენ კონდეს პრინცსა და სხვა უცხოელ ძვირფას სტუმრებს რუსეთის დედაქალაქში ვიზიტისას. 1825-39 წლებში ჩერნიაშოვის სახლში სამხედრო სკოლა იმყოფებოდა, სადაც [[ლერმონტობი, მიხეილ|მიხაილ ლერმონტოვი]] სწავლობდა ორი წელი.
 
-სტაკენშნეიდერის სასახლის იდეა იმპერატორ [[ნიკოლოზ I]]-ს გაუჩნდა მისი ქალიშვილის დიდი გრაფინია მარია ნიკოლაევნასთვის საჩუქრის მიზნად იუჟინ დე ბოჰარნესის ვაჟთან ქორწინებასთან დაკავშირებით. მიუხედავად იმისა, რომ მიწითალო-მოყავისფრო ფასადი კორინთული კოლონებით ტრადიციულ ნეოკლასიკურ წყობაშია გადაწყვეტილი, მთელი დიზაინი მე-17 საუკუნის ფრანგული [[ბაროკო|ბაროკოს]] ზეგავლენით შეიქმნა. ასევე შეინიშნება [[რენესანსი|რენესანსის]] ეკლექტიური ზეგავლენა ექტერიერის ორნამენტებსა და ინტერიერის დეკორაციებზე. შენობის ყოველი მთავარი დარბაზი სხვადასხვა ისტორიულ სტილშია გადაწყვეტილი.
+სტაკენშნეიდერის სასახლის იდეა იმპერატორ [[ნიკოლოზ I (რუსეთი)|ნიკოლოზ I]]-ს გაუჩნდა მისი ქალიშვილის დიდი გრაფინია მარია ნიკოლაევნასთვის საჩუქრის მიზნად იუჟინ დე ბოჰარნესის ვაჟთან ქორწინებასთან დაკავშირებით. მიუხედავად იმისა, რომ მიწითალო-მოყავისფრო ფასადი კორინთული კოლონებით ტრადიციულ ნეოკლასიკურ წყობაშია გადაწყვეტილი, მთელი დიზაინი მე-17 საუკუნის ფრანგული [[ბაროკო|ბაროკოს]] ზეგავლენით შეიქმნა. ასევე შეინიშნება [[რენესანსი|რენესანსის]] ეკლექტიური ზეგავლენა ექტერიერის ორნამენტებსა და ინტერიერის დეკორაციებზე. შენობის ყოველი მთავარი დარბაზი სხვადასხვა ისტორიულ სტილშია გადაწყვეტილი.
 
 [[სურათი:Repin state council.jpg|thumb|left|250px|[[რეპინი, ილია|ილია რეპინის]] სახელმწიფო საბჭოს სესია სასახლის დიდ დარბაზში]]
 მარიის სასახლე იმპერიის საკუთრებაში [[1884]] წელს დაბრუნდა, მის განკარგვაში რჩება 1917 წლამე, და აქ განლაგებული იყო რუსეთის იმპერიის სახელმწიფო საბჭო, სახ. კანცელარია და მინისტრთა საბჭო. სახელმწიფო საბჭოს სესიათა დიდი დარბაზის დიზაინი ეკუთვნის ლეონ ბენუას (1906). 1902 წლის 2 აპრილს ტერორისტების მიერ მოკლულ იქნა შინაგან საქმეთა მინისტრი, დმიტრი სიპიაგინი, სასახლის ვესტიბიულში.
