--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -19,6 +19,8 @@
 [[სურათი:SPQR.jpg|thumb|left|რომის სენატი და ხალხი]]
 საშინაო პოლიტიკის საკითხების გარდა სენატი საგარეო პოლიტიკასაც მართავდა. სენატის ფუნქციებში ფინანსებზე მეთვალყურეობაც შედიოდა. ამის გარდა სენატი იღებდა და აუქმებდა კანონებს. ყველა ამ მნიშვნელოვანი ფუნქციის შესრულებამ სენატი სახელმწიფოს გულად აქცია. რიგითი რომაელისთვის სენტის უპატივცემლობა სახელმწიფოს უპატივცემლობას უტოლდებოდა. ეს კარგად აისახა ცნობილ ფორმულაშიც SPQR, senatus populus que romanus (რომის სენატი და ხალხი).
 
+თავდაპირველად სენატორები მხოლოდ პატრიციუსები იყვნენ, ხოლო [[ძვ. წ. IV საუკუნე|ძვ. წ. IV საუკუნიდან]], ხანგძლივი ბრძოლის შემდეგ, სენატში მოხვედრა პლებეებმაც შეძლეს. მიუხედავად ამისა, [[რომის რესპუბლიკა|რესპუბლიკის]] პერიოდში სენატორების უმეტესობას პატრიციუსები შეადგენდნენ.
+
 ===იმპერია===
 
 {{ესკიზი}}
