--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -19,7 +19,9 @@
 [[სურათი:SPQR.jpg|thumb|left|რომის სენატი და ხალხი]]
 საშინაო პოლიტიკის საკითხების გარდა სენატი საგარეო პოლიტიკასაც მართავდა. სენატის ფუნქციებში ფინანსებზე მეთვალყურეობაც შედიოდა. ამის გარდა სენატი იღებდა და აუქმებდა კანონებს. ყველა ამ მნიშვნელოვანი ფუნქციის შესრულებამ სენატი სახელმწიფოს გულად აქცია. რიგითი რომაელისთვის სენტის უპატივცემლობა სახელმწიფოს უპატივცემლობას უტოლდებოდა. ეს კარგად აისახა ცნობილ ფორმულაშიც SPQR, senatus populus que romanus (რომის სენატი და ხალხი).
 
-თავდაპირველად სენატორები მხოლოდ პატრიციუსები იყვნენ, ხოლო [[ძვ. წ. IV საუკუნე|ძვ. წ. IV საუკუნიდან]], ხანგძლივი ბრძოლის შემდეგ, სენატში მოხვედრა პლებეებმაც შეძლეს. მიუხედავად ამისა, [[რომის რესპუბლიკა|რესპუბლიკის]] პერიოდში სენატორების უმეტესობას პატრიციუსები შეადგენდნენ.
+თავდაპირველად სენატორები მხოლოდ პატრიციუსები იყვნენ, ხოლო [[ძვ. წ. IV საუკუნე|ძვ. წ. IV საუკუნიდან]], ხანგძლივი ბრძოლის შემდეგ, სენატში მოხვედრა პლებეებმაც შეძლეს. მიუხედავად ამისა, [[რომის რესპუბლიკა|რესპუბლიკის]] პერიოდში სენატორების უმეტესობას პატრიციუსები შეადგენდნენ. [[ძვ. წ. 313]] წლამდე სენატში ახალ წევრებს კონსული იღებდა, მოგვიანებით კი ცენზორი. პლებეებს შეეძლოთ სენატში მოხვედრა მხოლოდ იმ შემთხვევაში, თუ მათ კონსულებათ აირჩევდნენ, რადგან ყოფილ კონსულებს ტრადიციის თანახმად სენატორად რიცხავდნენ.
+
+
 
 ===იმპერია===
 
