--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -21,7 +21,7 @@
 
 თავდაპირველად სენატორები მხოლოდ პატრიციუსები იყვნენ, ხოლო [[ძვ. წ. IV საუკუნე|ძვ. წ. IV საუკუნიდან]], ხანგძლივი ბრძოლის შემდეგ, სენატში მოხვედრა პლებეებმაც შეძლეს. მიუხედავად ამისა, [[რომის რესპუბლიკა|რესპუბლიკის]] პერიოდში სენატორების უმეტესობას პატრიციუსები შეადგენდნენ. [[ძვ. წ. 313]] წლამდე სენატში ახალ წევრებს კონსული იღებდა, მოგვიანებით კი ცენზორი. პლებეებს შეეძლოთ სენატში მოხვედრა მხოლოდ იმ შემთხვევაში, თუ მათ კონსულებათ აირჩევდნენ, რადგან ყოფილ კონსულებს ტრადიციის თანახმად სენატორად რიცხავდნენ.
 
-
+სენატსა და სახალხო კრებას სორის პირველი მწვავე დაპირისპირება მოხდა [[ტრიბუნი|ტრიბუნის]] [[გრაქხუსი, ტიბერიუს|ტებერიუს გრაქხუსის]] რეფორმების მხარდაჭერისთვის კენჭისყირისას. ეს ამბავი ამ უკანასკნელისთვის ტრაგიკულად დასრულდა.
 
 ===იმპერია===
 
