--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -23,6 +23,8 @@
 
 სენატსა და სახალხო კრებას შორის პირველი მწვავე დაპირისპირება მოხდა [[ტრიბუნი|ტრიბუნის]] [[ ტიბერიუს სემპრონიუს გრაკჰუსი|ტიბერიუს გრაქხუსის]] რეფორმების მხარდაჭერისთვის კენჭისყირისას. ეს ამბავი ამ უკანასკნელისთვის ტრაგიკულად დასრულდა. თითქმის იგივე ამბავი განმეორდა [[ძვ. წ. 123]] წელს, როდესაც ტიბერიუსის უმცროსმა ძმამ [[გაიუს სემპრონიუს გრაკჰუსი|გაიუსმა]] სცადა ძმის რეფორმები აეღორძინებინა.
 
+როდესაც [[სულა]] ცენზორი გახდა, მან სენატორად მიღების ასაკობრივი ცენზი 46 წლიდან 30 წლამდე ჩამოწია და გააორმაგა სენატორთა რაოდენობა. მოგვიანებით [[გაიუს იულიუს კეისარი|კეისარმა]] კიდევ გაზარდა სენატორთა რაოდენობა 1000 კაცამდე.
+
 ===იმპერია===
 
 {{ესკიზი}}
