--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -27,7 +27,9 @@
 
 ===იმპერია===
 
-{{ესკიზი}}
+როდესაც [[ოქტავიანე ავგუსტუსი|ოქტავიანემ]] მოიგო სამოქალაქო ომი
+
+[[რომის იმპერია|რომის]] პირველი [[რომის იმპერატორი|იმპერატორი]] [[ოქტავიანე ავგუსტუსი]]
 
 ==განაწესი==
 
