--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -25,6 +25,8 @@
 
 როდესაც [[სულა]] ცენზორი გახდა, მან სენატორად მიღების ასაკობრივი ცენზი 46 წლიდან 30 წლამდე ჩამოწია და გააორმაგა სენატორთა რაოდენობა. მოგვიანებით [[გაიუს იულიუს კეისარი|კეისარმა]] კიდევ გაზარდა სენატორთა რაოდენობა 1000 კაცამდე.
 
+სენატის ძალაუფლება შეირყა [[გაიუს მარიუსი|მარიუსის]] [[მარიუსის სამხედრო რეფორმა|სამხედრო რეფორმის]] ძალაში შესვლის სემდეგ. საქმე ისაა, რომ ბრუტუსის ეპოქიდან, ანუ რესპუბლიკის შექმნიდან მოყოლებული, აფსოლუტური ძალაიფლება ერთი პიროვნების ხელში პრაქტიკულად არ ხვდებოდა (იშვიათი გამონაკლისები - 6 თვის ვადით არჩეული [[დიქტატორი|დიქტატორები]]).
+
 ===იმპერია===
 
 როდესაც [[ოქტავიანე ავგუსტუსი|ოქტავიანემ]] მოიგო სამოქალაქო ომი
