--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -25,7 +25,7 @@
 
 როდესაც [[სულა]] ცენზორი გახდა, მან სენატორად მიღების ასაკობრივი ცენზი 46 წლიდან 30 წლამდე ჩამოწია და გააორმაგა სენატორთა რაოდენობა. მოგვიანებით [[გაიუს იულიუს კეისარი|კეისარმა]] კიდევ გაზარდა სენატორთა რაოდენობა 1000 კაცამდე.
 
-სენატის ძალაუფლება შეირყა [[გაიუს მარიუსი|მარიუსის]] [[მარიუსის სამხედრო რეფორმა|სამხედრო რეფორმის]] ძალაში შესვლის სემდეგ. საქმე ისაა, რომ ბრუტუსის ეპოქიდან, ანუ რესპუბლიკის შექმნიდან მოყოლებული, აფსოლუტური ძალაიფლება ერთი პიროვნების ხელში პრაქტიკულად არ ხვდებოდა (იშვიათი გამონაკლისები - 6 თვის ვადით არჩეული [[დიქტატორი|დიქტატორები]]).
+სენატის ძალაუფლება შეირყა [[გაიუს მარიუსი|მარიუსის]] [[მარიუსის სამხედრო რეფორმა|სამხედრო რეფორმის]] ძალაში შესვლის სემდეგ. საქმე ისაა, რომ ბრუტუსის ეპოქიდან, ანუ რესპუბლიკის შექმნიდან მოყოლებული, აფსოლუტური ძალაიფლება ერთი პიროვნების ხელში პრაქტიკულად არ ხვდებოდა (იშვიათი გამონაკლისები - 6 თვის ვადით არჩეული [[დიქტატორი|დიქტატორები]]). სამხედრო რეფორმამდე სენატის თანხმობის გარეშე კონსული ჯარს ვერ შეკრიბავდა, თან ჯარი მუდმივი და პროფესიული არ იყო. ხოლო გაიუს მარიუსის რეფორმამ გამოიწვია პროფესიული არმიის ჩამოყალიბება, რომელიც თავისი მხედართმასვრის ერთგული იყო. ამრიგად მხედართმთავარმა არმიაზე დაყრდნობით მიიღო ისეთი ძალაუფლება, რომ სეეძლო კაკნონზე და სენატზე მაღლა დამდგარიყო. თავისთავად რეფორმამ აამაღლა რომაული არმიის ბრძოლისუნარიანობა, მაგრამ მეორე მხრივ ამან განაპირობა სამოქალაქო ომების მთელი სერია, რომლებიc [[ძვ. წ. II  საუკუნე|ძვ. წ. II  საუკუნის]] მიწურულიდან [[ძვ. წ. I  საუკუნე|ძვ. წ. I  საუკუნის]] მეორე ნახევრამდე გაგრძელდა და რესპუბლიკის კრახით დასრულდა.
 
 ===იმპერია===
 
