--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -29,9 +29,9 @@
 
 ===იმპერია===
 
-როდესაც [[ოქტავიანე ავგუსტუსი|ოქტავიანემ]] მოიგო სამოქალაქო ომი
+როდესაც [[ოქტავიანე ავგუსტუსი|ოქტავიანემ]] მოიგო სამოქალაქო ომი, მას ხელთ აფხოლუტური ძალაუფლება ჰქონდა, მაგრამ მიუხედავად ამისა, იგი არ გაილაშქრა რესპუბლიკური ტრადიციების წინააღმდეგ. [[რომის იმპერატორი|იმპერატორი]] და [[ავგუსტუსი (წოდება)|ავგუსტუსი]] იგი სენატის თანხმობით გახდა. უნდა ავღნიშნოთ რომ ხანგძლივი სამოქალაქო ომების და რეპრესიების არაერთი ტალღის შემდეგ სენატს სხვა არჩევანი არ ჰქონდა.
 
-[[რომის იმპერია|რომის]] პირველი [[რომის იმპერატორი|იმპერატორი]] [[ოქტავიანე ავგუსტუსი]]
+ამ დროიდან უმაღლესი ძალაუფლება სენატის ხელიდან [[პრინცეპსტი|პრინცეპსტის]] ხელში გადავიდა. სენატი მხოლოდ მისი მრჩევლის ფუნქციებს ასრულებდა. [[69]] წელს [[იულიუს-კლავდიუსების_დინასტია|იულიუს-კლავდიუსების]] დინასტიის უკანასკნელი წარმომადგენლის [[ნერონი|ნერონის]] დამხობის შემდეგ
 
 ==განაწესი==
 
