--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -32,7 +32,7 @@
 
 როდესაც [[ოქტავიანე ავგუსტუსი|ოქტავიანემ]] მოიგო სამოქალაქო ომი, მას ხელთ აფხოლუტური ძალაუფლება ჰქონდა, მაგრამ მიუხედავად ამისა, იგი არ გაილაშქრა რესპუბლიკური ტრადიციების წინააღმდეგ. [[რომის იმპერატორი|იმპერატორი]] და [[ავგუსტუსი (წოდება)|ავგუსტუსი]] იგი სენატის თანხმობით გახდა. უნდა ავღნიშნოთ რომ ხანგძლივი სამოქალაქო ომების და რეპრესიების არაერთი ტალღის შემდეგ სენატს სხვა არჩევანი არ ჰქონდა.
 
-ამ დროიდან უმაღლესი ძალაუფლება სენატის ხელიდან [[პრინცეპსტი|პრინცეპსტის]] ხელში გადავიდა. სენატი მხოლოდ მისი მრჩევლის ფუნქციებს ასრულებდა. [[69]] წელს [[იულიუს-კლავდიუსების_დინასტია|იულიუს-კლავდიუსების]] დინასტიის უკანასკნელი წარმომადგენლის [[ნერონი|ნერონის]] დამხობის შემდეგ
+ამ დროიდან უმაღლესი ძალაუფლება სენატის ხელიდან [[პრინცეპსტი|პრინცეპსტის]] ხელში გადავიდა. სენატი მხოლოდ მისი მრჩევლის ფუნქციებს ასრულებდა. [[ფლავიუსების დინასტია|ფლავიუსების დინასტიის]] პერიოდში ძველი პატრიციული ოჯახები, საიდანაც ტრადიციულად ხდებოდა სენატორთა შემადგენლობის შევსება, იმდენად შეთხელდა, რომ სენატორები ხდებოდნენ უკვე ის მოქალაქეები, ვისაც ამის საშუალებას ქონებრივი ცენზი აძლევდა. მოგვიანებით კი რომის მოქალაქეობის პროვინციული მოსახლეობისთვის დარიგებამ, პროვინციალებს სენატში მოხვედრის საშუალება მისცა.
 
 ==განაწესი==
 
