--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -34,6 +34,8 @@
 
 ამ დროიდან უმაღლესი ძალაუფლება სენატის ხელიდან [[პრინცეპსტი|პრინცეპსტის]] ხელში გადავიდა. სენატი მხოლოდ მისი მრჩევლის ფუნქციებს ასრულებდა. [[ფლავიუსების დინასტია|ფლავიუსების დინასტიის]] პერიოდში ძველი პატრიციული ოჯახები, საიდანაც ტრადიციულად ხდებოდა სენატორთა შემადგენლობის შევსება, იმდენად შეთხელდა, რომ სენატორები ხდებოდნენ უკვე ის მოქალაქეები, ვისაც ამის საშუალებას ქონებრივი ცენზი აძლევდა. მოგვიანებით კი რომის მოქალაქეობის პროვინციული მოსახლეობისთვის დარიგებამ, პროვინციალებს სენატში მოხვედრის საშუალება მისცა.
 
+[[I საუკუნე|I საუკუნის მიწურულს]], [[დომიციანი|დომიციანის]] მოკვლის შემდეგ სენატის მნიშვნელობა კვლავ გაიზარდა. [[ანტონინების დინასტია|ანტონინების დინასტიის]] ([[კომოდუსი|კომოდუსის]] გარდა) იმპერატორებს სენატორები თავისი წრიდან ირჩევდნენ. სენატორთა მიერ არჩეული იმპერატორები ისტორიაში ასევე [[ხუთი კარგი იმპერატორი|ხუთი კარგი იმპერატორის]] სახელით შევიდნენ.
+
 ==განაწესი==
 
 {{ესკიზი}}
