--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -34,7 +34,9 @@
 
 ამ დროიდან უმაღლესი ძალაუფლება სენატის ხელიდან [[პრინცეპსტი|პრინცეპსტის]] ხელში გადავიდა. სენატი მხოლოდ მისი მრჩევლის ფუნქციებს ასრულებდა. [[ფლავიუსების დინასტია|ფლავიუსების დინასტიის]] პერიოდში ძველი პატრიციული ოჯახები, საიდანაც ტრადიციულად ხდებოდა სენატორთა შემადგენლობის შევსება, იმდენად შეთხელდა, რომ სენატორები ხდებოდნენ უკვე ის მოქალაქეები, ვისაც ამის საშუალებას ქონებრივი ცენზი აძლევდა. მოგვიანებით კი რომის მოქალაქეობის პროვინციული მოსახლეობისთვის დარიგებამ, პროვინციალებს სენატში მოხვედრის საშუალება მისცა.
 
-[[I საუკუნე|I საუკუნის მიწურულს]], [[დომიციანი|დომიციანის]] მოკვლის შემდეგ სენატის მნიშვნელობა კვლავ გაიზარდა. [[ანტონინების დინასტია|ანტონინების დინასტიის]] ([[კომოდუსი|კომოდუსის]] გარდა) იმპერატორებს სენატორები თავისი წრიდან ირჩევდნენ. სენატორთა მიერ არჩეული იმპერატორები ისტორიაში ასევე [[ხუთი კარგი იმპერატორი|ხუთი კარგი იმპერატორის]] სახელით შევიდნენ.
+[[I საუკუნე|I საუკუნის]] მიწურულს, [[დომიციანი|დომიციანის]] მოკვლის შემდეგ სენატის მნიშვნელობა კვლავ გაიზარდა. [[ანტონინების დინასტია|ანტონინების დინასტიის]] ([[კომოდუსი|კომოდუსის]] გარდა) იმპერატორებს სენატორები თავისი წრიდან ირჩევდნენ. სენატორთა მიერ არჩეული იმპერატორები ისტორიაში ასევე [[ხუთი კარგი იმპერატორი|ხუთი კარგი იმპერატორის]] სახელით შევიდნენ. ამ პერიოდში რომის იმპერიამ დიდების მწვერვალს მიაღწია.
+
+[[მესამე საუკუნის კრიზისი|მესამე საუკუნის კრიზისის]] პერიოდში სენატი უძლური იყო ემართა სიტუაცია. [[III საუკუნე|III საუკუნის მიწურულს იმპერატორი გახდა [[დიოკლექტიანე]]. მან საფუძვლიანად შეცვალა მმართველობის სისტემა. პრინციპატს [[დომინანტი]] ჩაენაცვლა.
 
 ==განაწესი==
 
