--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -36,7 +36,7 @@
 
 [[I საუკუნე|I საუკუნის]] მიწურულს, [[დომიციანი|დომიციანის]] მოკვლის შემდეგ სენატის მნიშვნელობა კვლავ გაიზარდა. [[ანტონინების დინასტია|ანტონინების დინასტიის]] ([[კომოდუსი|კომოდუსის]] გარდა) იმპერატორებს სენატორები თავისი წრიდან ირჩევდნენ. სენატორთა მიერ არჩეული იმპერატორები ისტორიაში ასევე [[ხუთი კარგი იმპერატორი|ხუთი კარგი იმპერატორის]] სახელით შევიდნენ. ამ პერიოდში რომის იმპერიამ დიდების მწვერვალს მიაღწია.
 
-[[მესამე საუკუნის კრიზისი|მესამე საუკუნის კრიზისის]] პერიოდში სენატი უძლური იყო ემართა სიტუაცია. [[III საუკუნე|III საუკუნის მიწურულს იმპერატორი გახდა [[დიოკლექტიანე]]. მან საფუძვლიანად შეცვალა მმართველობის სისტემა. პრინციპატს [[დომინანტი]] ჩაენაცვლა.
+[[მესამე საუკუნის კრიზისი|მესამე საუკუნის კრიზისის]] პერიოდში სენატი უძლური იყო ემართა სიტუაცია. [[III საუკუნე|III საუკუნის]] მიწურულს იმპერატორი გახდა [[დიოკლექტიანე]]. მან საფუძვლიანად შეცვალა მმართველობის სისტემა. პრინციპატს [[დომინანტი]] ჩაენაცვლა.
 
 ==განაწესი==
 
