--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -36,7 +36,9 @@
 
 [[I საუკუნე|I საუკუნის]] მიწურულს, [[დომიციანი|დომიციანის]] მოკვლის შემდეგ სენატის მნიშვნელობა კვლავ გაიზარდა. [[ანტონინების დინასტია|ანტონინების დინასტიის]] ([[კომოდუსი|კომოდუსის]] გარდა) იმპერატორებს სენატორები თავისი წრიდან ირჩევდნენ. სენატორთა მიერ არჩეული იმპერატორები ისტორიაში ასევე [[ხუთი კარგი იმპერატორი|ხუთი კარგი იმპერატორის]] სახელით შევიდნენ. ამ პერიოდში რომის იმპერიამ დიდების მწვერვალს მიაღწია.
 
-[[მესამე საუკუნის კრიზისი|მესამე საუკუნის კრიზისის]] პერიოდში სენატი უძლური იყო ემართა სიტუაცია. [[III საუკუნე|III საუკუნის]] მიწურულს იმპერატორი გახდა [[დიოკლექტიანე]]. მან საფუძვლიანად შეცვალა მმართველობის სისტემა. პრინციპატს [[დომინანტი]] ჩაენაცვლა.
+[[მესამე საუკუნის კრიზისი|მესამე საუკუნის კრიზისის]] პერიოდში სენატი უძლური იყო ემართა სიტუაცია. [[III საუკუნე|III საუკუნის]] მიწურულს იმპერატორი გახდა [[დიოკლექტიანე]]. მან საფუძვლიანად შეცვალა მმართველობის სისტემა. პრინციპატს [[დომინანტი]] ჩაენაცვლა. დომინუსს აღარ სჭირდებოდა სენატისგან აღიარება. ამ დროიდან სენატმა ძალაუფლება და მნიშვნელობა სრულიად დაკარგა, ისევე როგორც ქალაქ რომმა, რომელიც III საუკუნის მიწურულს აღარ იყო იმპერატორის რეზიდენცია. სენატს ამ დროიდან მხოლოდ სასამართლო საქმეების გარჩევა შეეძლო, მიუხედავად ამისა სენატორის წოდება ჯერ კიდევ პრივილიგირებულად ითვლებოდა.
+
+ხოლო [[395]] წლიდან, როდესაც იმპერია გაიყო, სენატი მუნიციპალურ საბჭოთ იქცა. აღმოსავლეთ რომის იმპერიის დედაქალაქში [[კონსტანტინოპოლი|კონსტანტინოპოლში]] თავისი სენატი ჩამოყალიბდა. ზოგი გავლენიანი სენატორი ორივე სენატის წევრი იყო. [[476]] წელს დასავლეთ რომის იმპერიის დაცემათან ერთად რომის სენატმაც შეწყვიტა არსებობა.
 
 ==განაწესი==
 
